# FCPEG.temp

./: .gitignore  LICENSE  README.md
docs/: index.md
docs/commen/: index.md
docs/commen/unanaly_cases/: index.md  left_recursion.md
docs/spec/: index.md
docs/spec/api/: index.md
docs/spec/api/Block/: index.md
docs/spec/draft/: index.md
docs/spec/grammar/: index.md  v1r2.md
docs/spec/lang/: definition.md  index.md
docs/spec/tree/: index.md
impl/dart/: .packages  pubspec.yaml
impl/dart/lib/: fcpeg.dart  langNode.dart  pegBuilder.dart  pegNode.dart  pegParser.dart  stdLib.dart
impl/rust/: Cargo.toml
impl/rust/cmd/: Cargo.toml
impl/rust/cmd/src/: main.rs  syntax.cfg  syntax.fcpeg
impl/rust/docs/: index.md
impl/rust/fcpeg/: Cargo.toml
impl/rust/fcpeg/src/: block.rs  blocklexer.rs  blockparser.rs  config.rs  cons.rs  data.rs  file.rs  fileman.rs  il.rs  js.rs  lib.rs  parser.rs  rule.rs  setting.rs  test.rs  tree.rs
impl/rust/fcpeg/src/fcpeg/: syntax.fcpeg  syntax.fcpil
impl/rust/fcpeg/src/syntax/: config.fcpeg  fcpeg.fcpeg
impl/rust/src/: blockparser.rs  data.rs  lib.rs  parser.rs  rule.rs  ruleparser.rs  setting.rs
impl/rust_cmd/: Cargo.toml
impl/rust_cmd/src/: main.rs
impls/dart/: pubspec.yaml
impls/dart/.dart_tool/: package_config.json
pack_pickets/: pubspec.yaml
pack_pickets/docs/spec/: PackPickets_Spec.md  Picket_Spec_Draft.md
pack_pickets/lib/: packPickets.dart
pack_pickets/lib/src/: creater.dart  detector.dart  errs.dart  loader.dart  picket.dart
pack_pickets_cli/lib/: packPickets.dart
pack_pickets_cli/lib/src/: errs.dart
(+85 files in other folders)
