[package]
name = "rust_cmd"
version = "0.1.0"
authors = ["Garnet3106 <manage@gant.work>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcpeg = { path = "../fcpeg" }
rustnutlib = { path = "../../../../../ChesLang/rustnutlib" }
