[package]
name = "rust_cmd"
version = "1.2.0-alpha+0"
authors = ["Garnet3106 <manage@gant.work>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cons-util = { path = "../../../../../ChesLang/cons-util" }
argh = "0.1"
fcpeg = { path = "../fcpeg" }
