[package]
name = "fcpeg"
version = "0.1.0"
authors = ["Garnet3106 <manage@gant.work>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
regex = "1"
rustnutlib = { path = "../../../../../ChesLang/rustnutlib" }
uuid = { version = "0", features = ["v4"] }
